samples/_failures_safe/1761442202_a57017_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_179e2d94.c: In function ‘main’:
./samples/SAFE/__tmp_179e2d94.c:144:5: error: expected expression at end of input
  144 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_179e2d94.c:144:5: error: expected declaration or statement at end of input
